Multiple minor improvements to the run_validation_server.py and the HTML folder: - Changed the run_validation_server.py and the JS files to   make sure they work together with the buildbot without   manual adjustments (paths for the proxy) - Modified the run_validation_server.py to make sure it   always servers the newest logs, not those from the   'current'-folder (which may not exist) - Decreased the minimum window size for the widescreen layout - Introduced a new Options-submenu to the website, which   provides the possibility to turn off all descriptions   (which saves a lot of space on small monitors)
git-svn-id: https://belle2.cc.kek.jp/svn/trunk/software@13516 b38c6c8f-bee8-465d-8448-9abe6915d496

--- a/validation/html/css/main.css
+++ b/validation/html/css/main.css
@@ -358,7 +358,12 @@ textarea {
 .object_wrap
 {
     border-bottom:1px solid gray;
-    display:flex;
+    display: -webkit-box;      /* OLD - iOS 6-, Safari 3.1-6 */
+    display: -moz-box;         /* OLD - Firefox 19- (buggy but mostly works) */
+    display: -ms-flexbox;      /* TWEENER - IE 10 */
+    display: -webkit-flex;     /* NEW - Chrome */
+    display: flex;             /* NEW, Spec - Opera 12.1, Firefox 20+ */
+    -webkit-flex-wrap: wrap;
     flex-wrap:wrap;
     justify-content:space-between;
     margin-bottom:25px;
